--- a/package.json
+++ b/package.json
@@ -17,19 +17,23 @@
     "@react-navigation/native-stack": "^7.3.11",
     "axios": "^1.9.0",
     "expo": "~53.0.7",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "^7.1.4",
     "expo-status-bar": "~2.2.3",
+    "qrcode": "^1.5.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
-    "expo-image-picker": "~16.1.4"
+    "expo-clipboard": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
